   (now always the full `data.frame` is saved; see #95) [2016-10-16 Sun]
 o Adapt `synergise` to new grid search (closes #81) [2016-10-16 So]
 o Update synapterTiny and `synapterTinyData` [2016-10-16 So]
 o Replace `hwriter` by `rmarkdown` report in `synergise`; closes #120.
  [2016-10-17 Mon]
 o Add `fragmentMatchingPerformance` [2016-10-20 Thu]

CHANGES IN VERSION 1.13.1
-------------------------
 o Update call to nQuants to accomodate changes in MSnbase (see commit
   #ce637b87e491a2f4c9f93490b2f4c7027cbfce16) <2016-02-29 Mon>
 o Defunct synapterGUI <2016-02-29 Mon>

CHANGES IN VERSION 1.13.0
-------------------------
 o Bioc devel 3.2

CHANGES IN VERSION 1.12.0
-------------------------
 o Bioc release 3.1

CHANGES IN VERSION 1.11.2
-------------------------
 o fixing bug introduced in 1.11.1 when coercing from
   Synapter to MSnSet object - see this post on the support forum for
   details https://support.bioconductor.org/p/71087/ <2015-09-27 Sun>

CHANGES IN VERSION 1.11.1
-------------------------
 o avoiding error when some fcols are missing when coercing from
   Synapter to MSnSet object - see this post on the support forum for
   details https://support.bioconductor.org/p/71087/ <2015-09-07 Mon>

CHANGES IN VERSION 1.9.5
------------------------
 o update cross reference to qvalue::plot.qvalue in Synapter man page;
   closes #86 [2015-03-31 Tue]

CHANGES IN VERSION 1.9.4
------------------------
 o use biocstyle [2015-01-23 Fri]
 o use requireNamespace [2015-01-23 Fri]

CHANGES IN VERSION 1.9.3
------------------------
 o Filter entries in quantiation final peptides and Pep3D data that don't match
   in their intensity valus; see #42 for details. [2014-11-26 Wed]

CHANGES IN VERSION 1.9.2
------------------------
 o Only suggesting tcltk and tcltk2, as gui is now deprecated
   [2014-11-21 Fri]

CHANGES IN VERSION 1.9.1
------------------------
 o Deprecating synatperGUI [2014-11-10 Mon]
 o Directing questions to the Bioc support site [2014-11-10 Mon]
